[package]
name = "pivot"
version = "0.1.0"
authors = ["Garen Tyler <garentyler@gmail.com>"]
edition = "2018"
description = "Pivot is a new programming language built with Rust by Garen Tyler. Pivot is currently in the alpha stage of development."
license = "MIT"
repository = "https://github.com/garentyler/pivot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.1"
nom = "5.1.2"
ron = "0.6.2"
serde = "1.0.117"
wat = "1.0.29"
